css/stylesheet.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Style */

body {
  font-size: 15px;
  font-family: Arial, Arial, Helvetica, sans-serif;
  line-height: 1.5;
  background: #D1D1D1;
}

a {
  color: #63a52a;
  text-decoration: none;
  -webkit-transition: color ease-in-out 0.3s;
}

a:hover {
  text-decoration: underline;
  color: #90D355;
}

h1.title {
  margin: 30px 20px 10px;
  font-size: 60px;
  font-weight: bold;
  font-style: italic;
  font-family:Georgia, serif;
  text-align: center;
}

.wrapper {
  width: 1000px;
  margin: 0 auto;
}

#container {
  border: 1px solid #2a2a2a;
  background: #ddd url(../images/pattern.png);
  box-shadow: 0 0 5px #b1b1b1;
}

p.tagline {
  padding: 20px 20px 0;
  color: #fff;
  font-size: 17px;
}

#main {
  margin-top: 20px;
  padding: 0 20px 90px;
  background-color: #fff;
}

.download-bar {
  background: #222;
  border: 5px solid #444;
  padding: 10px;
  margin: 0 -35px 20px;
  position: relative;
}

.download-bar .inner {
  overflow: hidden;
}

.download-bar .inner a {
  display: block;
	float: left;
	margin-right: 30px;
}

.download-bar .inner img {
	display: block;
}

.download-bar .watch-fork iframe {
  display: block;
  float: left;
  border-right: 1px solid #ddd;
  padding-right: 5px;
}
.download-bar .watch-fork iframe.last {
  border-right: 0 none;
  padding-right: 0;
  padding-left: 5px;
  border-left: 1px solid #fff;
}
.download-bar .watch-fork {
  overflow: hidden;
  float: right;
  background-color: #eee;
  padding: 5px;
  border-radius: 3px;
}

.download-bar .blc {
  border: 10px solid black;
  border-color: transparent transparent black;
  width: 0;
  height: 0;
  display: block;
  position: absolute;
  bottom: -15px;
  left: 0;
  -moz-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.download-bar .trc {
  border: 10px solid black;
  border-color:  black transparent transparent;
  width: 0;
  height: 0;
  display: block;
  position: absolute;
  top: -15px;
  right: 0;
  -moz-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.download-bar .avatar {
  border: 1px solid black;
  display: block;
  padding: 4px;
  float: left;
}

.download-bar .avatar img {
  display: block;
}

.download-bar a.code {
  background: transparent url(../images/code.png) no-repeat 0 2px;
  padding-left: 35px;
  margin-top: 8px;
  display: block;
  float: left;
  text-indent: 0;
  width: auto;
  height: auto;
  opacity: 1;
  -moz-opacity: 1;
  filter:alpha(opacity=1);
}

.current-section {
  position: fixed;
  top: 0;
  left: 50%;
  width: 693px;
  margin-left: -352px;
  background: #222;
  border: 5px solid #444;
  color: #fff;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity ease-in-out 0.3s;
}

.current-section p {
  padding: 5px 27px;
  font-size: 24px;
  font-weight: bold;
}

.current-section a {
  float: right;
  text-indent: -10000px;
  background: transparent url(../images/top.png) no-repeat 0 0;
  width: 20px;
  height: 20px;
  opacity: 0.8;
  margin-right: 12px;
  margin-top: 12px;
  -moz-opacity: 0.8;
  filter:alpha(opacity=8);
  -webkit-transition: opacity ease-in-out 0.3s;
}

.current-section a:hover {
  opacity: 1;
  -moz-opacity: 1;
  filter:alpha(opacity=1);
}

.current-section a.zip {
  margin-right: 8px;
}

a.zip,
a.zip span {
  background: transparent url(../images/zip.png) no-repeat 0 0;
  width: 30px;
  height: 21px;
  opacity: 0.8;
  display: inline-block;
  text-indent: -10000px;
  -moz-opacity: 0.8;
  filter:alpha(opacity=8);
  -webkit-transition: opacity ease-in-out 0.3s;
}

a.tar,
a.tar span {
  background: transparent url(../images/tar.png) no-repeat 0 0;
  width: 30px;
  height: 21px;
  opacity: 0.8;
  display: inline-block;
  text-indent: -10000px;
  -moz-opacity: 0.8;
  filter:alpha(opacity=8);
  -webkit-transition: opacity ease-in-out 0.3s;
}

a.code {
  background: transparent url(../images/code.png) no-repeat 0 2px;
  width: 30px;
  height: 21px;
  display: block;
  opacity: 0.8;
  display: inline-block;
  text-indent: -10000px;
  -moz-opacity: 0.8;
  filter:alpha(opacity=8);
  -webkit-transition: opacity ease-in-out 0.3s;
}

a.zip:hover,
a.tar:hover,
a.code:hover {
  opacity: 1;
  -moz-opacity: 1;
  filter:alpha(opacity=1);
}

a.download-button {
  border: 1px solid black;
  border-radius: 3px;
  display: inline-block;
  text-indent: 0!important;
  width: auto;
  float: right;
  background: #999; /* for non-css3 browsers */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#37ADD4', endColorstr='#1B657E'); /* for IE */
  background: -webkit-gradient(linear, left top, left bottom, from(#37ADD4), to(#1B657E)); /* for webkit browsers */
  background: -moz-linear-gradient(top,  #37ADD4,  #1B657E); /* for firefox 3.6+ */
  height: auto;
  margin-left: 10px;
}

a.download-button span {
  background-position: 10px 5px;
  width: auto;
  height: auto;
  padding: 5px 10px;
  padding-left: 45px;
  display: inline-block;
  text-indent: 0!important;
  color: #fff;
}

footer {
  margin-bottom: 60px;
  padding-bottom: 60px;
}

footer .owner {
  background: #222;
  border: 5px solid #444;
  padding: 5px 15px;
  margin: -67px -10px 35px;
  color: #d6d6d6;
}

footer .creds small {
  float: right;
  font-size: 10px;
  text-align: right;
  margin-left: 15px;
}

footer .owner .avatar {
  background-color: #666;
  display: block;
  margin: -19px 10px 0 0;
  width: 60px;
  float: left;
}

footer .owner img {
  display: block;
  border: 1px solid #2a2a2a;
  margin: 5px;
}

footer .owner p {
  font-family:Georgia, serif;
}

footer .owner p a {
  font-size: 16px;
  font-style: italic;
}
/* ... */

